--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -8,28 +8,54 @@
     android:layout_height="match_parent"
     tools:context="dev.eyesless.simple_weather_for_fishermans.AMainActivity">
 
-        <EditText
-            android:id="@+id/edtxt_founded_city"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPostalAddress"
-            android:labelFor="@+id/edittext_centralfragment"
-            android:text="@string/founded_city"
-            app:layout_constraintTop_toTopOf="parent"
+        <TextView
+            android:id="@+id/txt_defaults"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_default="wrap"
+            android:gravity="start"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/btn_img_find_coords" />
+
+        <TextView
+            android:id="@+id/txt_to_change"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_default="wrap"
+            android:gravity="start"
+            android:text="@string/to_change"
+            android:textSize="12sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txt_defaults"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/btn_img_find_coords"
             android:layout_marginRight="8dp"
+            />
+
+        <ImageButton
+            android:id="@+id/btn_img_find_coords"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_info_outline_black_24dp"
+            android:contentDescription="@string/btn_img_find_coords"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent" />
+
 
         <Button
             android:id="@+id/btn_find_coords"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/find_coords"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/edtxt_founded_city"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/txt_to_change"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
@@ -50,4 +76,5 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/btn_find_coords" />
 
-   </android.support.constraint.ConstraintLayout>
+
+</android.support.constraint.ConstraintLayout>
