--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -48,19 +48,6 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent" />
 
-
-        <Button
-            android:id="@+id/btn_find_coords"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/find_coords"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_to_change"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
-
         <TextView
             android:id="@+id/txt_coordinates"
             android:layout_width="0dp"
@@ -74,7 +61,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_find_coords" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_img_find_coords" />
 
 
 </android.support.constraint.ConstraintLayout>
