--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -53,15 +53,15 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintHeight_default="wrap"
-            android:gravity="center"
+            android:textSize="12sp"
+            android:gravity="end"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_img_find_coords" />
+            />
 
 
 </android.support.constraint.ConstraintLayout>
