--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -6,7 +6,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dev.eyesless.simple_weather_for_fishermans.AMainActivity">
+    tools:context="dev.eyesless.simple_weather_for_fishermans.AMainActivity"
+    >
 
         <TextView
             android:id="@+id/txt_defaults"
@@ -19,7 +20,9 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/btn_img_find_coords" />
+            app:layout_constraintRight_toLeftOf="@+id/btn_img_find_coords"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/txt_to_change"
@@ -28,14 +31,15 @@
             app:layout_constraintHeight_default="wrap"
             android:gravity="start"
             android:text="@string/to_change"
-            android:textSize="12sp"
+            android:textSize="@dimen/text_size_smallest"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_defaults"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/btn_img_find_coords"
             android:layout_marginRight="8dp"
-            />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <ImageButton
             android:id="@+id/btn_img_find_coords"
@@ -48,20 +52,38 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent" />
 
-        <TextView
-            android:id="@+id/txt_coordinates"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_default="wrap"
-            android:textSize="12sp"
-            android:gravity="end"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            />
+
+    <FrameLayout
+        android:id="@+id/frame1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_default="wrap"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates"
+        app:layout_constraintTop_toBottomOf="@+id/txt_to_change">
+
+    </FrameLayout>
+
+    <TextView
+                android:id="@+id/txt_coordinates"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_default="wrap"
+                android:textSize="@dimen/text_size_smallest"
+                android:gravity="end"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
