--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -53,21 +53,19 @@
             app:layout_constraintRight_toRightOf="parent" />
 
 
-    <FrameLayout
-        android:id="@+id/frame1"
-        android:layout_width="match_parent"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_cf"
+        android:scrollbars="vertical"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_default="wrap"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/txt_to_change"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates"
-        app:layout_constraintTop_toBottomOf="@+id/txt_to_change">
-
-    </FrameLayout>
+        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates" />
 
     <TextView
                 android:id="@+id/txt_coordinates"
