--- a/app/src/main/res/layout-land/fragment_central.xml
+++ b/app/src/main/res/layout-land/fragment_central.xml
@@ -83,5 +83,20 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" />
 
+    <TextView
+        android:id="@+id/try_to_load_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/trytoload"
+        android:gravity="center"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="@+id/recycler_view_cf"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates" />
+
 
 </android.support.constraint.ConstraintLayout>
