--- a/app/src/main/res/layout-land/fragment_central.xml
+++ b/app/src/main/res/layout-land/fragment_central.xml
@@ -98,5 +98,16 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/txt_coordinates" />
 
+    <ProgressBar
+        android:id="@+id/progressBar_cf"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_to_change"
+        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
