create - add oval button and some icons

--- a/app/src/main/res/layout-land/fragment_central.xml
+++ b/app/src/main/res/layout-land/fragment_central.xml
@@ -45,7 +45,8 @@
             android:id="@+id/btn_img_find_coords"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_info_outline_black_24dp"
+            app:srcCompat="@drawable/compass"
+            android:background="@drawable/circle_button_selector"
             android:contentDescription="@string/btn_img_find_coords"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
