--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -63,7 +63,10 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="8dp"
                 app:layout_constraintRight_toLeftOf="@+id/imageView_fish"
-                android:layout_marginEnd="8dp" />
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                />
 
             <ImageView
                 android:id="@+id/imageView_fish"
@@ -71,10 +74,12 @@
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_sync_black_48dp"
                 android:contentDescription="@string/its_fishing"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp" />
 
             <TextView
                 android:id="@+id/textView_wind"
