--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <style name="WeatherMainTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -17,7 +16,7 @@
 
     </style>
 
-    <style name="ToolBarPopStyle" parent="WeatherMainTheme">
+    <style name="ToolBarPopStyle" parent="Theme.AppCompat.Light.NoActionBar">
 
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:textColorSecondary">@android:color/black</item>
