--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -81,9 +81,19 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar_cf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_to_change" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_cf"
@@ -101,16 +111,5 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_to_change"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
-
-    <ProgressBar
-        android:id="@+id/progressBar_cf"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_to_change"
-        app:layout_constraintBottom_toTopOf="@+id/txt_coordinates"
-        />
 
 </android.support.constraint.ConstraintLayout>
