--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
- <android.support.constraint.ConstraintLayout
+<android.support.v4.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/swipe"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context="dev.eyesless.simple_weather_for_fishermans.AMainActivity"
+    >
+
+ <android.support.constraint.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dev.eyesless.simple_weather_for_fishermans.AMainActivity"
     >
 
         <TextView
@@ -85,23 +91,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/try_to_load_data"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginStart="0dp"
-        android:gravity="center"
-        android:text="@string/trytoload"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="8dp" />
-
-    <android.support.v7.widget.RecyclerView
+     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_cf"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -119,4 +109,22 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_to_change"
         app:layout_constraintVertical_bias="0.0" />
 
+     <TextView
+         android:id="@+id/try_to_load_data"
+         android:layout_width="0dp"
+         android:layout_height="wrap_content"
+         android:layout_marginEnd="0dp"
+         android:layout_marginLeft="0dp"
+         android:layout_marginRight="0dp"
+         android:layout_marginStart="0dp"
+         android:gravity="center"
+         android:text="@string/trytoload"
+         app:layout_constraintLeft_toLeftOf="parent"
+         app:layout_constraintRight_toRightOf="parent"
+         app:layout_constraintBottom_toBottomOf="parent"
+         android:layout_marginTop="0dp"
+         android:layout_marginBottom="8dp" />
+
+
 </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
