--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -37,7 +37,7 @@
             app:layout_constraintHeight_default="wrap"
             android:gravity="start"
             android:text="@string/to_change"
-            android:textSize="@dimen/text_size_smallest"
+            android:textSize="@dimen/text_size_micro"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_defaults"
             android:layout_marginLeft="8dp"
