--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="text_size">18sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="text_size_smallest">12sp</dimen>
+    <dimen name="text_size_micro">10sp</dimen>
 </resources>
