--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -8,4 +8,11 @@
         android:title="@string/about"
         />
 
+    <item
+        android:id="@+id/menu_navigation_mailtodevs"
+        android:icon="@drawable/ic_email_variant_black_24dp"
+        android:orderInCategory="2"
+        android:title="@string/mailtodev"
+        />
+
 </menu>
