--- a/app/src/main/res/layout-land/fragment_central.xml
+++ b/app/src/main/res/layout-land/fragment_central.xml
@@ -14,10 +14,13 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+     android:background="@color/colorBackground"
+
+     >
 
         <TextView
             android:id="@+id/txt_defaults"
+            android:textColor="@android:color/white"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintHeight_default="wrap"
@@ -33,6 +36,7 @@
 
         <TextView
             android:id="@+id/txt_to_change"
+            android:textColor="@android:color/white"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintHeight_default="wrap"
@@ -63,6 +67,7 @@
 
     <TextView
                 android:id="@+id/txt_coordinates"
+                android:textColor="@android:color/white"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintHeight_default="wrap"
@@ -114,6 +119,7 @@
 
     <TextView
         android:id="@+id/try_to_load_data"
+        android:textColor="@android:color/white"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
