--- a/app/src/main/res/layout/activity_amain.xml
+++ b/app/src/main/res/layout/activity_amain.xml
@@ -38,10 +38,10 @@
             android:id="@+id/replaced_main"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/guideline_main_1"
-            app:layout_constraintGuide_percent="0.1"
+            app:layout_constraintGuide_percent="0.08"
             android:orientation="horizontal" />
 
 
@@ -61,7 +61,8 @@
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"/>
+        android:layout_gravity="start"
+        android:background="@color/colorAccent"/>
 
 </android.support.v4.widget.DrawerLayout>
 
