--- a/app/src/main/res/layout/custom_alert.xml
+++ b/app/src/main/res/layout/custom_alert.xml
@@ -24,6 +24,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
+                android:textSize="14sp"
             />
     </ScrollView>
 </LinearLayout>
