--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#673ab7</color>
     <color name="colorPrimaryDark">#311b92</color>
     <color name="colorAccent">#b3e5fc</color>
+    <color name="colorBackground">#9575cd</color>
+
 </resources>
