--- a/app/src/main/res/layout/activity_amain.xml
+++ b/app/src/main/res/layout/activity_amain.xml
@@ -16,6 +16,14 @@
         android:layout_height="match_parent"
         >
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/nature_port"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/arrow" />
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="0dp"
